--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -43,11 +43,27 @@
   font-size: 1.8em;
 }
 
+.signUpMainHeaderCo h1 {
+  width: 100%;
+  font-weight: 400;
+  font-size: 1.7em;
+  text-align: center;
+  color: var(--blue);
+}
+
 .loginP p {
   font-size: 14px;
   color: black;
   width: 90%;
   color: var(--light-gray);
+}
+
+.loginP2{
+  width: 100% !important;
+}
+
+.loginP2 p{
+  text-align: center !important;
 }
 
 .loginP {
@@ -121,6 +137,28 @@
   font-weight: 200 !important;
 }
 
+.signUpInput{
+  height: 45px;
+  margin: 0;
+  border: 1px solid rgb(166, 166, 166);
+  padding: 5px;
+  font-weight: 200 !important;
+  width: 100%;
+  height: 45px;
+  border-radius: 12px;
+  
+}
+
+.signUpInputReal{
+  margin-top: 3%;
+}
+
+.signUpInputBtn{
+  background-color: var(--blue);
+  color: white;
+  text-transform: capitalize;
+}
+
 .loginFormBtnContainer {
   width: 100%;
   margin-top: 20px;
@@ -178,6 +216,17 @@
   align-items: center;
   justify-content: center;
   color: rgba(0, 0, 0, 0.5);
+}
+
+.signUpPLine{
+  color: black !important;
+  background-color: white !important;
+  font-weight: 400 !important;
+}
+
+.signUpLine{
+  height: 0.092em !important;
+  background-color: rgb(166, 166, 166) !important;
 }
 
 .loginLine {
@@ -272,6 +321,29 @@
   height: 100%;
   width: 50%;
   border-radius: 12px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.MainSignUp{
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
+.signUpLeft{
+  width: 50%;
+  padding: 3.5em;
+}
+
+.signUpRight{
+  width: 50%;
+}
+
+.signUpRight{
+  background-image: url(../../Assets/Component\ 9.png);
+  
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
