--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -158,15 +158,15 @@ section {
 }
 
 .price {
-  font-weight: 300;
+  font-weight: 400;
   position: absolute;
   top: 55px;
   right: 50px;
-  color: white;
+  color: rgb(245, 188, 75);
   transform-style: preserve-3d;
   transition: ease all 2.3s;
   z-index: 4;
-  font-size: 1.5em;
+  font-size: 1.2em;
   transform: translateZ(0px);
 }
 
