--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -137,13 +137,18 @@
   font-weight: 200 !important;
 }
 
+.mainSignUpFormDiv{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .signUpInput{
   height: 45px;
-  margin: 0;
   border: 1px solid rgb(166, 166, 166);
   padding: 5px;
   font-weight: 200 !important;
-  width: 100%;
+  width: 90%;
   height: 45px;
   border-radius: 12px;
   
@@ -151,6 +156,14 @@
 
 .signUpInputReal{
   margin-top: 3%;
+}
+
+#gsi_416034_865027, .nsm7Bb-HzV7m-LgbsSe-MJoBVe, .haAclf, .qJTHM{
+  width: 100% !important;
+}
+
+.nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-MJoBVe{
+  width: 500px !important;
 }
 
 .signUpInputBtn{
@@ -227,6 +240,7 @@
 .signUpLine{
   height: 0.092em !important;
   background-color: rgb(166, 166, 166) !important;
+  width: 90% !important;
 }
 
 .loginLine {
@@ -236,6 +250,19 @@
   position: relative;
   z-index: 1;
 }
+
+.loginOr2 {
+  width: 100%;
+  padding: 0 4px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 45px;
+  padding: 10px 0;
+  margin: 15px auto;
+  display: flex;
+  justify-content: center;
+  }
 
 .inquiry {
   display: flex;
@@ -329,12 +356,14 @@
 .MainSignUp{
   display: flex;
   width: 100%;
+  gap: 2em;
   height: 100vh;
+  padding: 2.2em 2em;
 }
 
 .signUpLeft{
   width: 50%;
-  padding: 3.5em;
+  padding: 0 1em;
 }
 
 .signUpRight{
@@ -343,7 +372,8 @@
 
 .signUpRight{
   background-image: url(../../Assets/Component\ 9.png);
-  
+  border-radius: 12px;
+  border: 1px solid rgb(0, 0, 0, 0.3);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
