--- a/src/Components/JobSearchResults/jobResults.css
+++ b/src/Components/JobSearchResults/jobResults.css
@@ -265,13 +265,15 @@
   @media screen and (min-width: 320px) and (max-width: 736px) {
     .jobResultsBottom{
         flex-direction: column;
+        width: fit-content;
+        padding-top: 1em;
+        height: fit-content;
     }
 
     .jobResultsBottomLeft{
         width: 100%;
         background-color: white;
-        top: 0%;
-        padding-top: 15%;
+        padding-top: 5%;
         z-index: 1;
     }
 
@@ -282,7 +284,8 @@
     .jobResultsBottomRight{
         width: 100%;
         position: relative;
-        height: 100%;
+        height: 100vh;
+        overflow: auto;
     }
 
     .jobDuration button{
@@ -343,5 +346,12 @@
 
     .jobResultsTopNav p, .jobResultsTopNav a{
         font-size: 65%;
+    }
+
+    .nojobsPhrase{
+        position: relative !important;
+        width: 100%;
+        border-radius: 1.5em;
+        height: 90vh;
     }
   }
