--- a/src/Components/OpenJobs/openingsCard/openingsCard.css
+++ b/src/Components/OpenJobs/openingsCard/openingsCard.css
@@ -86,6 +86,7 @@
 @media screen and (min-width: 320px) and (max-width: 736px) {
     .openingCardContainer{
         width: 100%;
+        background-color: rgba(226, 219, 211, 0.4);
     }
     
     .openingCardTitle{
