--- a/src/Components/JobSearchResults/jobResults.css
+++ b/src/Components/JobSearchResults/jobResults.css
@@ -281,6 +281,7 @@
         background-color: white;
         padding-top: 0%;
         z-index: 1;
+        top: 12%;
     }
 
     .jobRangeDropdown .dropdown-menu li{
